--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag 'assign_dev_modal' %>
 <div class="container mt-2">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1> Interviews </h1>
@@ -6,14 +7,13 @@
       <%= link_to "Add department" ,new_department_path, method: :get ,class:"btn btn-warning border-0 rounded shadow px-3 py-2" %>
     </div>
   </div>
-  <%= turbo_frame_tag 'assign_dev_modal' %>
   <div class="d-flex justify-content-around">
     <% @kanban_columns.each do |col| %>
       <div class="box border" data-item="<%=col.id %>">
         <h3 class="text-center"><%=col.name.humanize%></h3>
         <hr>
         <div class="kvs-card" style="height: 770px; overflow: auto;">
-          <% col.client_requests.sort_by{ |card| card.position}.each do |interview| %>
+          <% col.client_requests.each do |interview| %>
             <div class="border bg-warning bg-opacity-50 m-2">
               <div class="card m-2 border border-danger" >
                 <div class="card-body">
@@ -26,7 +26,7 @@
               </div>
               <div class="sub-tickets collapse" id="Req<%= interview.id %>">
                 <% interview.departments.each do |dept| %>
-                  <% if interview.kanban_column.name == 'new_request' %>
+                  <% if interview.kanban_column.name == 'new_request' && dept.no_of_resources !=0 %>
                     <div class="card m-2  border border-dark" >
                       <div class="card-body">
                         <p class="mb-0">dept. <%=dept.name%></p>
@@ -51,7 +51,7 @@
             </div>
           <%end%>
           <!--if developers exist and main ticket is in new request-->
-          <% @client_requests.each do |interview| %>
+            <% @client_requests.each do |interview| %>
             <% interview.departments.each do |dept| %>
               <% dept.developers.each do |dev| %>
                 <% if col.name == dev.developer_status && interview.kanban_column.name !=  dev.developer_status %>
@@ -72,41 +72,21 @@
               <%end%>
             <%end %>
           <%end%>
+          <!-- -->
         </div>
       </div>
     <% end %>
   </div>
 </div>
-<div class="modal fade actionModal" id="assignDeveloperModal" tabindex="-1" role="dialog" aria-labelledby="assignDeveloperModal" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <div class="actionHeader d-flex align-items-center">
-          <h5 class="modal-title" id="assignDeveloperModal">Assign developer</h5>
-        </div>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modalForm" id="assignDeveloperForm">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline" data-bs-dismiss="modal">Cancel</button>
-        <button type="submit" form="accept_skill_form" class="btn btn-primary">Save</button>
-      </div>
-    </div>
-  </div>
-</div>
+
 <script>
   // ---------------- Kanban with Sortable --------------------
   // import "jquery";
 if (typeof jQuery != 'undefined') {
-
   console.log('jQuery loaded from index');
 }
-
 else {
-
   console.log('not loaded from index');
-
 }
 
   $( function() {
