--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -41,37 +41,37 @@
                       <div class="sub-card">
                         <div class="card m-2  border border-dark"  data-item="<%=dev.id %>">
                           <p class="mb-0">dept. <%=dept.name%></p>
-                          <p class="mb-0">developer. <%=dev.name%></p>
+                          < class="mb-0">developer. <%=dev.name%></p>
                         </div>
                       </div>
                     <% end %>
-                  <% end %>
+                  <% end %> 
                 <%end%>
               </div>
             </div>
           <%end%>
           <!--if developers exist and main ticket is in new request-->
-            <% @client_requests.each do |interview| %>
-            <% interview.departments.each do |dept| %>
-              <% dept.developers.each do |dev| %>
-                <% if col.name == dev.developer_status && interview.kanban_column.name !=  dev.developer_status %>
-                  <div class="m-2 sub-card">
-                    <div class="card m-2" data-item="<%=dev.id %>">
-                      <div class="card-header">
-                        #id : <%=interview.id%>
-                        <%=interview.customer_name%>
+            <% @sub_tickets_details.each do |col_name, value| %>
+              <% value.each do |k| %>
+              <% if k["developers"] != [] && col_name == col.name %>
+                <div class="">
+                  <div class="m-2 card border" >
+                    <div class="card-header" >
+                      <h6><%=k["customer_name"] %></h6>
+                    </div>
+                    <div class="sub-card">
+                      <% k["developers"].each do |k1| %>
+                      <div class="card-body mt-2 bg-info bg-opacity-25" style="z-index:100;" data-item="<%=k1.id %>">
+                        <p><%=k1.name %></p>
+                        <p><%=k1.developer_status %></p>  
                       </div>
-                      <div class="card-body">
-                        #id : <%=dev.id%>
-                        <p class="mb-0">dept. <%=dept.name%></p>
-                        <p class="mb-0">developer. <%=dev.name%></p>
-                      </div>
+                      <% end %>
                     </div>
                   </div>
-                <% end %>
-              <%end%>
-            <%end %>
-          <%end%>
+                </div>
+              <% end %>
+              <% end %>
+            <% end %>
           <!-- -->
         </div>
       </div>
